--- a/GloveForms/Properties/Resources.resx
+++ b/GloveForms/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="GloveBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GloveBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GlovePlay" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GlovePlay.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
