--- a/GloveForms/Properties/Resources.resx
+++ b/GloveForms/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="PatientFormBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PatientFormBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MainScreenWithoutIcons" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MainScreenWithoutIcons.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="GetDocumentBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GetDocumentBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,10 +142,13 @@
   <data name="MainScreenBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MainScreenBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SaveRecordButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SaveRecordButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="OptionsButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OptionsButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SaveRecordButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SaveRecordButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="StatisticsButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StatisticsButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
