--- a/GloveForms/Properties/Resources.resx
+++ b/GloveForms/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="StatisticsButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StatisticsButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CreditsButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CreditsButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,7 +151,7 @@
   <data name="OptionsButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\OptionsButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="StatisticsButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\StatisticsButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="StatisticsBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\StatisticsBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
